@@ -2,6 +2,10 @@
 
 	* i386/i386/locore.S (TIME_TRAP_UENTRY, TIME_TRAP_SENTRY)
 	(TIME_TRAP_UEXIT): Use TH_SYSTEM_TIMER instead of old TH_SYS_TIMER.
+	(current_tstamp, TIME_TRAP_UENTRY, TIME_TRAP_SENTRY, TIME_TRAP_UEXIT)
+	(TIME_INT_ENTRY, TIME_INT_EXIT, timer_switch, start_timer): Use
+	EXT(current_tstamp) and EXT(current_timer) instead of _current_tstampt
+	and _current_timer.
 
 2007-07-08  Samuel Thibault  <samuel.thibault@ens-lyon.org>
 
